[issues/6] Install Python from https://github.com/gasrios/p4lo

--- a/test/Dockerfile-ubuntu-18.04
+++ b/test/Dockerfile-ubuntu-18.04
@@ -19,4 +19,4 @@ RUN addgroup test sudo
 
 ENTRYPOINT ["/bin/bash", "-c"]
 
-CMD ["su test -c 'cd ~/localops && ./bootstrap.sh'"]
+CMD ["su test -c './bootstrap.sh'"]
