--- a/docker.yaml
+++ b/docker.yaml
@@ -57,6 +57,6 @@
     become: yes
     become_user: root
     user:
-      name: "{{ ansible_user_id }}"
+      name: "{{ lookup('env', 'USER') }}"
       groups: docker
       append: yes
