--- a/install.yaml
+++ b/install.yaml
@@ -23,5 +23,20 @@
         export PATH=/opt/python-3.9.1/bin:$PATH
         export PATH=$HOME/.local/bin:$PATH
 
+  - name: Check whether .bashrc exists
+    stat:
+      path: "{{ lookup('env', 'HOME') }}/.bashrc"
+    register: bashrc
+
   - name: Enable direnv in this dir
     shell: eval "$(direnv hook bash)" && direnv allow
+    when: envrc.bashrc.exists
+
+  - name: Check whether .zshrc exists
+    stat:
+      path: "{{ lookup('env', 'HOME') }}/.zshrc"
+    register: zshrc
+
+  - name: Enable direnv in this dir
+    shell: eval "$(direnv hook zsh)" && direnv allow
+    when: envrc.zshrc.exists
