--- a/install.yaml
+++ b/install.yaml
@@ -1,6 +1,3 @@
-- name: Install direnv
-  import_playbook: direnv.yaml
-
 - hosts: all
   gather_facts: false
   tasks:
@@ -20,7 +17,7 @@
     blockinfile:
       path: .envrc
       block: |
-        export PATH=/opt/python-3.9.1/bin:$PATH
+        export PATH=$HOME/.python-3.9.1/bin:$PATH
         export PATH=$HOME/.local/bin:$PATH
 
   - name: Enable direnv in this dir
