--- a/intellij.yaml
+++ b/intellij.yaml
@@ -1,23 +1,5 @@
-- hosts: all
-  gather_facts: false
-  tasks:
+- name: Install intellij, root
+  import_playbook: root/intellij.yaml
 
-  - name: Install Intellij with classic confinement
-    become: yes
-    become_user: root
-    snap:
-      name: intellij-idea-community
-      classic: yes
-
-  - name: Create ~/.IdeaIC2019.2/config/plugins
-    file:
-      path: "{{ lookup('env', 'HOME') }}/.IdeaIC2019.2/config/plugins"
-      mode: '744'
-      state: directory
-
-  - name: Installs Scala plugin
-    unarchive:
-      remote_src: yes
-      src: https://plugins.jetbrains.com/files/1347/71120/scala-intellij-bin-2020.1.1.zip
-      # TODO Force previous step to install this version of IntelliJ
-      dest: "{{ lookup('env', 'HOME') }}/.IdeaIC2019.2/config/plugins"
+- name: Install intellij, user
+  import_playbook: user/intellij.yaml
