--- a/microk8s.yaml
+++ b/microk8s.yaml
@@ -1,98 +1,5 @@
-# See https://microk8s.io/docs/troubleshooting#heading--common-issues ,
-# "My pods can't reach the internet or each other (but my MicroK8s host machine can)..."
-#
-# If you need your microk8s cluster to access the Internet, localops provides script
-# microk8s/ufw-allow-microk8s.sh to help you configure your firewall. However, localops
-# *DOES NOT* execute it, as this might be a security issue. Please review and customize
-# it as you see fit, given your use cases.
-#
-# Even after correctly configuring your firewall, you may experience connectivity issues,
-# after rebooting. Running "microk8s stop" before shutting down should prevent them from
-# happening and, even if they do, "microk8s start" and "microk8s stop" should fix them.
+- name: Install microk8s, root
+  import_playbook: root/microk8s.yaml
 
-- name: Install curl
-  import_playbook: curl.yaml
-
-- name: Install direnv
-  import_playbook: direnv.yaml
-
-- name: Install kubectl
-  import_playbook: kubectl.yaml
-
-- name: Install kubeval
-  import_playbook: kubeval.yaml
-
-- hosts: all
-  tasks:
-
-  - name: Install microk8s with option --classic
-    become: yes
-    become_user: root
-    snap:
-      name: microk8s
-      classic: yes
-      channel: latest/stable
-
-  - name: Add /snap/bin to PATH
-    lineinfile:
-      path: "{{ lookup('env', 'HOME') }}/.bashrc"
-      line: PATH="/snap/bin:$PATH"
-
-  # See https://microk8s.io/docs/addons
-  - name: Deploy Add ons
-    become: yes
-    become_user: root
-    shell: "/snap/bin/microk8s enable dns storage metallb:$(hostname -I | awk '{print $1}')/32"
-
-  - name: Add this user to group microk8s
-    become: yes
-    become_user: root
-    user:
-      name: "{{ lookup('env', 'USER') }}"
-      groups: microk8s
-      append: yes
-
-  - name: Create directory ~/.kube if it does not exist
-    file:
-      path: "{{ lookup('env', 'HOME') }}/.kube"
-      state: directory
-
-  # Why not use Ansible copy? It won't read the file, even with become_user
-  # FIXME Should not rely on home dir being at /home
-  - name: Copy /var/snap/microk8s/current/credentials/kubelet.config to ~/.kube/microk8s
-    become: yes
-    become_user: root
-    shell: "cp -f /var/snap/microk8s/current/credentials/kubelet.config {{ lookup('env', 'HOME') }}/.kube/microk8s"
-
-  - name: Change ownership, group and permissions of ~/.kube/microk8s
-    become: yes
-    become_user: root
-    file:
-      path: "{{ lookup('env', 'HOME') }}/.kube/microk8s"
-      owner: "{{ lookup('env', 'USER') }}"
-      group: "{{ lookup('env', 'USER') }}"
-      mode: '0600'
-
-  - name: Create file "~/.envrc" if it does not exist
-    file:
-      path: "{{ lookup('env', 'HOME') }}/.envrc"
-      state: touch
-
-  - name: Add microk8s KUBECONFIG configuration to ~/.envrc
-    blockinfile:
-      path: "{{ lookup('env', 'HOME') }}/.envrc"
-      block: |
-        export KUBECONFIG=$HOME/.kube/microk8s
-        export CONTEXT=microk8s
-
-  - name: Update direnv config
-    shell: direnv allow
-
-  - debug:
-      msg: >
-        MicroK8s was installed. If you need your microk8s cluster to access the Internet,
-        run script microk8s/ufw-allow-microk8s.sh as root. Be aware it will make changes
-        to your firewall that might pose security risks. Even after correctly configuring
-        your firewall, you may experience connectivity issues, after rebooting. Running
-        'microk8s stop' before shutting down should prevent them from happening and, even
-        if they do, 'microk8s start' and 'microk8s stop' should fix them.
+- name: Install microk8s, user
+  import_playbook: user/microk8s.yaml
