--- a/salesforce.yaml
+++ b/salesforce.yaml
@@ -1,43 +1,5 @@
-# From https://developer.salesforce.com/docs/atlas.en-us.222.0.sfdx_setup.meta/sfdx_setup/sfdx_setup_install_cli.htm#sfdx_setup_install_cli
-- hosts: all
-  gather_facts: false
-  tasks:
+- name: Install Salesforce, root
+  import_playbook: root/salesforce.yaml
 
-  - name: Update apt cache, if older than a day
-    become: yes
-    become_user: root
-    apt:
-      update_cache: yes
-      cache_valid_time: 86400
-
-  - name: Install npm
-    become: yes
-    become_user: root
-    apt:
-      state: latest
-      pkg: npm
-
-  # From https://docs.npmjs.com/resolving-eacces-permissions-errors-when-installing-packages-globally
-  - name: Create ~/.npm-global
-    file:
-      path: "{{ lookup('env', 'HOME') }}/.npm-global"
-      mode: '744'
-      state: directory
-
-  - name: Configure npm to use the new directory path
-    shell: "npm config set prefix \"{{ lookup('env', 'HOME') }}/.npm-global\""
-
-  - name: Install the Salesforce CLI
-    npm:
-      name: sfdx-cli
-      global: yes
-
-  - name: Add .npm-global/bin to PATH
-    lineinfile:
-      path: "{{ lookup('env', 'HOME') }}/.bashrc"
-      line: PATH=$HOME/.npm-global/bin:$PATH
-
-  - name: Install salesforcedx Plug-In
-    args:
-      executable: /bin/bash
-    shell: "source {{ lookup('env', 'HOME') }}/.bashrc && sfdx plugins:install salesforcedx"
+- name: Install Salesforce, user
+  import_playbook: user/salesforce.yaml
