[issues/11] Support better security through greater flexibility

--- a/install.yaml
+++ b/install.yaml
@@ -13,12 +13,10 @@
       state: touch
     when: not envrc.stat.exists
 
-  - name: Add /opt/python-3.9.1/bin and $HOME/.local/bin to local PATH using direnv
-    blockinfile:
+  - name: Add /opt/python-3.9.1/bin to local PATH using direnv
+    lineinfile:
       path: .envrc
-      block: |
-        export PATH=$HOME/.python-3.9.1/bin:$PATH
-        export PATH=$HOME/.local/bin:$PATH
+      line: export PATH=/opt/python-3.9.1/bin:$PATH
 
   - name: Enable direnv in this dir
     shell: eval "$(direnv hook bash)" && direnv allow
