[issues/11] Support better security through greater flexibility

--- a/install.yaml
+++ b/install.yaml
@@ -2,6 +2,11 @@
   gather_facts: false
   tasks:
 
+  - name: Enable direnv
+    lineinfile:
+      path: "{{ lookup('env', 'HOME') }}/.bashrc"
+      line: eval "$(direnv hook bash)"
+
   - name: Check whether file .envrc exists
     stat:
       path: .envrc
