[issues/14] Add support to ansible-lint

--- a/test/Dockerfile-ubuntu-18.04
+++ b/test/Dockerfile-ubuntu-18.04
@@ -5,24 +5,19 @@
 
 FROM ubuntu:18.04
 
-RUN apt update
+ENV DEBIAN_FRONTEND=noninteractive
 
-RUN DEBIAN_FRONTEND=noninteractive apt upgrade --assume-yes -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold"
-
-RUN DEBIAN_FRONTEND=noninteractive apt install --assume-yes sudo ubuntu-standard python3-distutils git
-
-RUN useradd --shell /bin/bash --create-home --home-dir /home/test test --skel /etc/skel
-
-RUN passwd -d test
-
-RUN addgroup test sudo
+RUN apt update && \
+    apt upgrade --assume-yes -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" && \
+    apt install --assume-yes sudo ubuntu-minimal ubuntu-standard python3-distutils git && \
+    useradd --shell /bin/bash --create-home --home-dir /home/test test --skel /etc/skel && \
+    passwd -d test && \
+    addgroup test sudo
 
 COPY . /home/test/localops/
 
-RUN chown -R test:test /home/test/localops
+RUN chown -R test:test /home/test/localops && \
+    su test -c 'cd /home/test/localops && ./bootstrap.sh' && \
+    rm -rf /home/test/localops
 
-RUN su test -c 'cd /home/test/localops && ./bootstrap.sh'
-
-RUN rm -rf /home/test/localops
-
-ENTRYPOINT ["su", "test", "-c"]
+ENTRYPOINT ["/bin/bash", "-c"]
