--- a/test/Dockerfile-ubuntu-20.04
+++ b/test/Dockerfile-ubuntu-20.04
@@ -5,27 +5,21 @@
 
 FROM ubuntu:20.04
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 # See https://bugs.launchpad.net/ubuntu/+source/command-not-found/+bug/1876034
-RUN rm /etc/apt/apt.conf.d/docker-gzip-indexes
-
-RUN apt update
-
-RUN DEBIAN_FRONTEND=noninteractive apt upgrade --assume-yes -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold"
-
-RUN DEBIAN_FRONTEND=noninteractive apt install --assume-yes sudo ubuntu-standard python3-distutils git
-
-RUN useradd --shell /bin/bash --create-home --home-dir /home/test test --skel /etc/skel
-
-RUN passwd -d test
-
-RUN addgroup test sudo
+RUN rm /etc/apt/apt.conf.d/docker-gzip-indexes && \
+    apt update && \
+    apt upgrade --assume-yes -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" && \
+    apt install --assume-yes sudo ubuntu-minimal ubuntu-standard python3-distutils git && \
+    useradd --shell /bin/bash --create-home --home-dir /home/test test --skel /etc/skel && \
+    passwd -d test && \
+    addgroup test sudo
 
 COPY . /home/test/localops/
 
-RUN chown -R test:test /home/test/localops
+RUN chown -R test:test /home/test/localops && \
+    su test -c 'cd /home/test/localops && ./bootstrap.sh' && \
+    rm -rf /home/test/localops
 
-RUN su test -c 'cd /home/test/localops && ./bootstrap.sh'
-
-RUN rm -rf /home/test/localops
-
-ENTRYPOINT ["su", "test", "-c"]
+ENTRYPOINT ["/bin/bash", "-c"]
