--- a/user/jupyter.yaml
+++ b/user/jupyter.yaml
@@ -4,5 +4,7 @@
 
   - name: Install Jupyter
     pip:
+      executable: pip
       name: jupyter
       state: latest
+      extra_args:  --no-cache-dir --upgrade --force-reinstall --user
