--- a/user/localstack.yaml
+++ b/user/localstack.yaml
@@ -4,5 +4,7 @@
 
   - name: Install LocalStack
     pip:
+      executable: pip
       name: localstack
       state: latest
+      extra_args:  --no-cache-dir --upgrade --force-reinstall --user
