--- a/root/gimp.yaml
+++ b/root/gimp.yaml
@@ -41,7 +41,12 @@
       deb: http://archive.ubuntu.com/ubuntu/pool/main/e/exiv2/libexiv2-14_0.25-3.1_amd64.deb
 
 #http://archive.ubuntu.com/ubuntu/pool/universe/u/ufraw/ufraw_0.22-3_amd64.deb
-#libgtkimageview0\n
+
+  - name: Install libgtkimageview0
+    become: yes
+    become_user: root
+    apt:
+      deb: http://archive.ubuntu.com/ubuntu/pool/universe/g/gtkimageview/libgtkimageview0_1.6.4+dfsg-2_amd64.deb
 
   - name: Install gimp-ufraw
     become: yes
