Direnv should not habe been removed, it is still used by microk8s

--- a/root/install.yaml
+++ b/root/install.yaml
@@ -22,3 +22,10 @@
     apt:
       state: latest
       pkg: unzip
+
+  - name: Install direnv
+    become: yes
+    become_user: root
+    apt:
+      state: latest
+      pkg: direnv
