--- a/user/docker-compose.yaml
+++ b/user/docker-compose.yaml
@@ -1,5 +1,4 @@
-- name: Create ~/bin and add it to PATH
-  import_playbook: create-user-bin.yaml
+- import_playbook: create-user-bin.yaml
 
 - hosts: all
   tasks:
