--- a/root/symfony.yaml
+++ b/root/symfony.yaml
@@ -12,7 +12,7 @@
     become: yes
     become_user: root
     apt:
-      pkg: php
+      pkg: php-cli
       state: latest
 
   - name: Install SimpleXML
