--- a/symfony.yaml
+++ b/symfony.yaml
@@ -1,5 +1,5 @@
-- name: Install PHP
-  import_playbook: root/php.yaml
+- name: Install Symfony, root
+  import_playbook: root/symfony.yaml
 
-- name: Install Symfony
+- name: Install Symfony, user
   import_playbook: user/symfony.yaml
