--- a/user/symfony.yaml
+++ b/user/symfony.yaml
@@ -1,5 +1,3 @@
-#- import_playbook: docker-compose.yaml
-
 - hosts: all
   gather_facts: false
   tasks:
@@ -29,6 +27,18 @@
     lineinfile:
       path: "{{ lookup('env', 'HOME') }}/.bashrc"
       line: PATH="{{ lookup('env', 'HOME') }}/.symfony/bin:$PATH"
+
+  - name: Install PHP CodeSniffer
+    composer:
+      command: require
+      global_command: yes
+      arguments: squizlabs/php_codesniffer
+
+  - name: Install PHP CodeSniffer
+    composer:
+      command: require
+      global_command: yes
+      arguments: friendsofphp/php-cs-fixer
 
   # https://packagist.org/packages/api-platform/core
   - name: Install API Platform Framework
