--- a/docker.yaml
+++ b/docker.yaml
@@ -2,5 +2,8 @@
 - name: Install docker, root
   import_playbook: root/docker.yaml
 
+- name: Setup user subuid/subgid for rootless docker
+  import_playbook: ./subuid-subgid.yaml
+
 - name: Install docker, user
   import_playbook: user/docker.yaml
