Set user ID in /etc/subuid and /etc/subgid (#18)
* Set user ID in /etc/subuid and /etc/subgid

* Reorganize files to match project structure

--- a/user/docker.yaml
+++ b/user/docker.yaml
@@ -7,6 +7,9 @@
     shell: "curl -fsSL https://get.docker.com/rootless | sh"
     args:
       warn: false
+  
+  - debug:
+      msg: "Rootless docker requires your user ID in /etc/subuid and /etc/subgid, per the /subuid-subgid.yaml playbook"
 
   - name: Start Docker registry service
     systemd:
