--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,12 @@
 # We need this specific configuration for a combination of factors:
 #
-# 1. We want to keep track of the user running Ansible, so "ansible_user_id" and "~" will not
-#    point to root (see "docker.yaml" and "kubernetes.yaml");
+# 1. We want to keep track of the user running Ansible, so "lookup('env', 'USER')"
+#    and "lookup('env', 'HOME')" will not point to root.
 #
-# 2. We *also* want to be able to su to other users, from this user (see "docker-registry.yaml").
+# 2. We also want to be able to su to other users, from this user.
 #
-# Because "vanilla su" will ask for a password, we need "sudo su".
+# 3. "Vanilla" su will always ask for a password; "sudo su" will only ask if sudo
+#    was configured to ask for passwords.
 
 [privilege_escalation]
 become_method=su
