--- a/user/install.yaml
+++ b/user/install.yaml
@@ -6,6 +6,6 @@
 
   - name: Create symbolic link to localops.sh in ~/bin
     file:
-      src: ~/localops/localops.sh
+      src: ~/.localops/localops.sh
       dest: ~/bin/localops
       state: link
