Fixes after testing in Ubuntu

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,7 +9,7 @@
 # By checking if the user is in the "sudo" group, we can determine which scenario we are in.
 # This is not merely theoretical: the default behavior of Ubuntu is (1), while Debian is (2),
 # so we do need to support both.
-become_exe=$(if [ ! -z "$(groups | egrep sudo)" ]; then echo 'which sudo'; else echo; fi) su
+become_exe=$(if [ ! -z "$(groups | egrep sudo)" ]; then which sudo; fi) su
 
 # Since either way we end up using "su," we assume that's the behavior we want.
 become_method=su
