--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,13 +1,15 @@
-# We need this specific configuration for a combination of factors:
-#
-# 1. We want to keep track of the user running Ansible, so "lookup('env', 'USER')"
-#    and "lookup('env', 'HOME')" will not point to root.
-#
-# 2. We also want to be able to su to other users, from this user.
-#
-# 3. "Vanilla" su will always ask for a password; "sudo su" will only ask if sudo
-#    was configured to ask for passwords.
-
 [privilege_escalation]
+
+# We are trying to account here for two different and incompatible scenarios:
+#
+# 1. The user can (or even must) use "sudo su" to escalate privileges.
+#
+# 2. The user can't sudo, and therefore must su.
+#
+# By checking if the user is in the "sudo" group, we can determine which scenario we are in.
+# This is not merely theoretical: the default behavior of Ubuntu is (1), while Debian is (2),
+# so we do need to support both.
+become_exe=$(if [ ! -z "$(groups | egrep sudo)" ]; then which sudo; fi) su
+
+# Since either way we end up using "su," we assume that's the behavior we want.
 become_method=su
-become_exe=$(which sudo) su
