--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,7 +6,8 @@
 #
 # 2. The user can't sudo, and therefore must su.
 #
-# By checking if the user is in the "sudo" group, we can determine which scenario we are in.
+# By checking if the user is in the "sudo" group, we can determine in which scenario we are.
+#
 # This is not merely theoretical: the default behavior of Ubuntu is (1), while Debian is (2),
 # so we do need to support both.
 become_exe=$(if [ ! -z "$(groups | egrep sudo)" ]; then which sudo; fi) su
