--- a/install.yaml
+++ b/install.yaml
@@ -10,6 +10,6 @@
 
   - name: Create symbolic link to localops.sh in ~/bin
     file:
-      src: ~/.localops/localops.sh
-      dest: ~/bin/localops
+      src: "{{ lookup('env', 'HOME') }}/.localops/localops.sh"
+      dest: "{{ lookup('env', 'HOME') }}/bin/localops"
       state: link
