Make gather_facts false by default

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,8 @@
+[defaults]
+
+# See https://docs.ansible.com/ansible/latest/reference_appendices/config.html#default-gathering
+gathering=explicit
+
 [privilege_escalation]
 
 # We are trying to account here for two different and incompatible scenarios:
