Removed Ubuntu 20.04 tests (no longer supported), added tests for Ubuntu 22.04 and 24.04, fixed installation to support both

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,8 +13,7 @@ gathering=explicit
 #
 # By checking if the user is in the "sudo" group, we can determine in which scenario we are.
 #
-# This is not merely theoretical: the default behavior of Ubuntu is (1), while Debian is (2),
-# so we do need to support both.
+# The default behavior in Ubuntu is (1), while Debian is (2), so we do need to support both.
 become_exe=$(if [ ! -z "$(groups | egrep sudo)" ]; then which sudo; fi) su
 
 # Since either way we end up using "su," we assume that's the behavior we want.
